<resources>
    <string name="app_name">轻浪沉</string>
    <string name="app_title">轻浪沉</string>
    <string name="selected_block_name">精选</string>
    <string name="works_block_name">创作</string>
    <string name="discovery_block_name">发现</string>
    <string name="modern_chinese">现代中国诗</string>
    <string name="classic_chinese">古典中国诗</string>
    <string name="foreign">外国诗</string>
    <string name="appreciation">评论</string>
    <string name="password_hint">密码几何</string>
    <string name="confirm_password_hint">深呼吸后确认密码</string>
    <string name="username_hint">愿闻君名</string>
    <string name="save_password">记住密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="offline_activity">飞花令</string>
    <string name="offline_declare">连接服务器失败，不如挑战下飞花令压压惊？</string>
    <string name="identify">请填写东校区正门所在街道名</string>
    <string name="identify_answer">深中街</string>
    <string name="app_info">v2.18a powered by 活鱼格勒2020</string>
    <string name="loading_hint">加载中</string>
    <string name="loading_more">正在加载更多</string>
    <string name="create_button">新</string>
    <string name="type_poem_hint">诗耶？</string>
    <string name="type_appreciation">文耶？</string>
    <string name="title_hint">一首诗的标题....</string>
    <string name="author_hint">一个诗人....</string>
    <string name="content_hint">我是一首诗\n这是第二行\n这是倒数第二行\n关于开始、爱情和死亡</string>
    <string name="appreciation_title_hint">一个标题....</string>
    <string name="appreciation_author_hint">一个作者....</string>
    <string name="appreciation_content_hint">一些内容....\n\n\n\n</string>
    <string name="create_over">发</string>
    <string name="title_over_length">标题太长了</string>
    <string name="author_over_length">作者名太长了</string>
    <string name="comment_over_length">评论太长了</string>
    <string name="net_error">网络出了点小问题</string>
    <string name="has_got_bottom">也许已经加载完毕，也许网络有点问题</string>
    <string name="make_comment">评</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="comment_hint">说点什么....</string>
    <string name="admin_hint">输入管理员秘钥，打开专制的大门....</string>
    <string name="admin_key">erkuangdaguhu?</string>
    <string name="create_selected">精</string>
    <string name="delete">删</string>
    <string name="apply_flying_order">对</string>
    <string name="flying_order_input_hint">请吧....</string>
    <string name="flying_order_word_hint">诗中必须包含哪个字？</string>
    <string name="flying_order_win">你打败了电脑、拯救了人类、毁灭了地球</string>
    <string name="flying_order_error">电脑出错了，不能算你赢</string>
    <string name="flying_order_type_hint">你的对手是....</string>
    <string name="flying_order_type_long">无情的电子诗人一号，地狱难度，加载极慢，请在wifi下进入</string>
    <string name="flying_order_type_short">随和的电子羊一号，对人类友好，加载较快</string>
</resources>
