<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPoemActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foregroundTintMode="src_over"
        android:src="@drawable/articleinfo_item_decoration"/>

    <EditText
        android:id="@+id/new_title"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:hint="@string/title_hint" />

    <EditText
        android:id="@+id/new_author"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@id/new_title"
        app:layout_constraintTop_toBottomOf="@id/new_title"
        android:textSize="15sp"
        android:hint="@string/author_hint"/>

    <RadioGroup
        android:id="@+id/new_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="start">

        <RadioButton
            android:id="@+id/new_type_classic_chinese"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/classic_chinese"
            android:textColor="@drawable/navigation_icon_tint"
            android:textSize="12sp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/new_type_modern_chinese"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/modern_chinese"
            android:textColor="@drawable/navigation_icon_tint"
            android:textSize="12sp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/new_type_foreign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/foreign"
            android:textColor="@drawable/navigation_icon_tint"
            android:textSize="12sp"
            android:gravity="center"/>

    </RadioGroup>

    <EditText
        android:id="@+id/new_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_author"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:background="@color/colorShallowGrey"
        android:textSize="20sp"
        android:lineSpacingExtra="10sp"
        android:hint="@string/content_hint"
        android:maxLines="11"
        android:maxHeight="350dp"/>

    <Button
        android:id="@+id/new_over"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="@color/colorGrey"
        android:text="@string/create_over"
        android:background="@color/colorShallowGrey"/>

    <Button
        android:id="@+id/new_selected"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/new_over"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="@color/colorGrey"
        android:text="@string/create_selected"
        android:background="@color/colorShallowGrey"
        android:visibility="invisible"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>