<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_marginTopPercent="15%"
        app:layout_marginLeftPercent="20%"
        app:layout_marginRightPercent="20%"
        app:layout_marginBottomPercent="30%">

        <EditText
            android:id="@+id/reg_username"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:gravity="center"
            android:hint="@string/username_hint"/>

        <EditText
            android:id="@+id/reg_password"
            app:layout_constraintTop_toBottomOf="@id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

        <EditText
            android:id="@+id/reg_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_hint"/>

        <EditText
            android:id="@+id/reg_identify"
            app:layout_constraintTop_toBottomOf="@id/reg_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/identify"/>

        <Button
            android:id="@+id/reg_confirm_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:text="@string/regist"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.percentlayout.widget.PercentFrameLayout>