<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/dialog_round"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/new_article_type_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/type_poem"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/type_poem_hint"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/type_appreciation"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/type_appreciation"
            android:textSize="25sp" />

    </RadioGroup>

    <Button
        android:id="@+id/new_article_cancel_button"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="@color/colorMidShallowGrey"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_article_confirm_button"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="@drawable/blue_button_color"
        android:textColor="@color/colorWhite"
        android:text="@string/confirm"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>