<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPoemActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foregroundTintMode="src_over"
        android:src="@drawable/articleinfo_item_decoration"/>

    <EditText
        android:id="@+id/new_appreciation_title"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:hint="@string/appreciation_title_hint" />

    <EditText
        android:id="@+id/new_appreciation_author"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@id/new_appreciation_title"
        app:layout_constraintTop_toBottomOf="@id/new_appreciation_title"
        android:textSize="15sp"
        android:hint="@string/appreciation_author_hint"/>


    <EditText
        android:id="@+id/new_appreciation_content"
        android:layout_width="350dp"
        android:layout_height="510dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_appreciation_author"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="left"
        android:background="@color/colorTransparentShallowGrey"
        android:textSize="20sp"
        android:lineSpacingExtra="10sp"
        android:hint="@string/appreciation_content_hint"/>

    <Button
        android:id="@+id/new_appreciation_over"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="@color/colorGrey"
        android:text="@string/create_over"
        android:background="@color/colorShallowGrey"/>

    <Button
        android:id="@+id/new_appreciation_selected"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/new_appreciation_over"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="@color/colorGrey"
        android:text="@string/create_selected"
        android:background="@color/colorShallowGrey"
        android:visibility="invisible"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>