<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/dialog_round">

    <EditText
        android:id="@+id/comment_edit"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorShallowGrey"
        android:background="@drawable/dialog_round"
        android:gravity="top"
        android:textSize="20sp"
        android:hint="@string/comment_hint"/>

    <Button
        android:id="@+id/comment_cancel"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_edit"
        app:layout_constraintStart_toStartOf="@id/comment_edit"
        android:backgroundTint="@color/colorShallowGrey"
        android:background="@drawable/button_round_corner"
        android:textSize="18sp"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/comment_confirm"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="@id/comment_edit"
        app:layout_constraintTop_toBottomOf="@id/comment_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@drawable/blue_button_color"
        android:background="@drawable/button_round_corner"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:text="@string/confirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>