<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppreciationArticleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/appreciation_delete"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    app:layout_constraintEnd_toStartOf="@id/appreciation_make_comment"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="30dp"
                    android:textSize="17sp"
                    android:text="@string/delete"
                    android:enabled="false"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/appreciation_make_comment"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:textSize="17sp"
                    android:text="@string/make_comment"/>

                <TextView
                    android:id="@+id/appreciation_title"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="72dp"
                    android:layout_marginEnd="60dp"
                    android:gravity="bottom"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/appreciation_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    app:layout_constraintStart_toStartOf="@id/appreciation_title"
                    app:layout_constraintTop_toBottomOf="@id/appreciation_title_divider" />

                <View
                    android:id="@+id/appreciation_title_divider"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appreciation_title"
                    app:layout_marginLeftPercent="6%" />

                <TextView
                    android:id="@+id/appreciation_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/appreciation_author"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/loading_hint"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/appreciation_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="Pieski\t2020-3-21 14:08"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/appreciation_title_divider"
                    app:layout_constraintTop_toBottomOf="@id/appreciation_content" />


            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="30dp"
                android:id="@+id/appreciation_comment"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>